(Fix) Set overflor for modal to visible to prevent scrolling

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -19,11 +19,21 @@ a, a:visited, a:hover, a:active {
   margin-right: auto;
   top: 50%;
 	transform: translateY(-50%);
+	overflow: visible;
 }
 
 /*AttendanceCalendar*/
 .attendanceCalendar td{
 	font-size: 11px;
+}
+
+/*AttendanceNavbar*/
+.attendanceNavbar{
+	margin-bottom: 15px;
+}
+
+.attendanceNavbar button{
+	float: right;
 }
 
 /*BehaviorButtons*/
@@ -43,8 +53,8 @@ a, a:visited, a:hover, a:active {
 
 .attendanceButton{
 	position: absolute;
-	top: -20px;
-	right: 0px;
+	top: -10px;
+	left: 0px;
 }
 
 /*Login*/
